<resources>
    <string name="app_name">TasksControl</string>
    <string name="add_button">Item1</string>
    <string name="update_button">Item2</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_main">Главное меню</string>
    <string name="title_activity_list_employee">Список сотрудников</string>
    <string name="title_activity_employee">Форма сотрудника</string>
    <string name="title_activity_list_project">Список проектов</string>
    <string name="title_activity_project">Форма проекта</string>
    <string name="title_activity_task">Форма задачи</string>
    <string name="title_activity_list_task">Список задач</string>
    <string name="title_activity_setting">Настройки приложения</string>
    <string name="name_task">Название задачи</string>
    <string name="hours_task">Количество часов</string>
    <string name="name_employee">Имя Сотрудника</string>
    <string name="middle_name_employee">Отчество Сотрудника</string>
    <string name="surname_employee">Фамилия Сотрудника</string>
    <string name="post_employee">Должность Сотрудника</string>
    <string name="name_project">Название Проекта</string>
    <string name="subName_project">Сокращенное имя Проекта</string>
    <string name="description_project">Описание Проекта</string>
    <string name="tasks_of_project">Список задач принадлежащих проекту</string>
    <string name="add_tasks_project">Добавить задачу к проекту</string>
    <string name="id_label">id</string>
    <string name="name_project_label">Название</string>
    <string name="sub_name_label">Соращенное название</string>
    <string name="description_label">Описание</string>
    <string name="surname_label">Фамилия</string>
    <string name="name_employee_label">Имя</string>
    <string name="middle_name_label">Отчество</string>
    <string name="post_label">Должность</string>
    <string name="name_task_label">Наименование</string>
    <string name="work_time_label">Работа(в часах)</string>
    <string name="start_date_label">Дата Начала</string>
    <string name="finish_date_label">Дата Окончания</string>
    <string name="status_label">Статус</string>
    <string name="employees_of_task_label">Список работающих над задачей</string>
    <string name="add_employee_label">Добавить</string>
    <string name="page_size">PAGE_SIZE</string>
</resources>
